--- a/pastaamora/ Pasta Amora.html
+++ b/pastaamora/ Pasta Amora.html
@@ -1,16 +1,14 @@
 <doctypehtml>
-<html1>
-    <!--Line 4 is the head. Where it starts--> 
+<html1 lang="en">
+   
     <head>
-        <!--Line 6 is meta, fonts display in different browers-->
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!--Line 9 is title, name of the tab of browser-->
         <title> Pasta Amora </title> 
         <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
         <link rel="Menu" href="./menu.html"
-        <!--line 11 is the body, the whole website --> 
-        <body>
+        
+    <body>
             <header> 
                 <h1>
                 <a href="/">Pasta Amora</a>
