--- a/pastaamora/about.html
+++ b/pastaamora/about.html
@@ -1,5 +1,20 @@
 <doctypehtml>
-    <html1>
-        
-    </html1>
+        <html1 lang="en"> 
+            <head>
+                <meta charset="UTF-8"/>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+                <title> About </title> 
+                <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
+                <link rel="Menu" href="./menu.html"
+
+
+
+
+
+
+
+
+
+            </head>
+        </html1>      
 </doctypehtml>
