--- a/pastaamora/menu.html
+++ b/pastaamora/menu.html
@@ -1,5 +1,5 @@
 <doctypehtml>
-    <html1>
+    <html1 lang="en">
         <head>
 
             <meta charset="UTF-8"/>
@@ -9,7 +9,7 @@
 
             <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
             <link rel="Menu" href="./menu.html"
-
+        
         </head>
     </html1>
 </doctypehtml>
