--- a/pastaamora/ Pasta Amora.html
+++ b/pastaamora/ Pasta Amora.html
@@ -1,4 +1,4 @@
-<doctypehtml>
+<!DOCTYPE html>
 <html1 lang="en">
    
     <head>
@@ -6,8 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Pasta Amora </title> 
         <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
-        <link rel="Menu" href="./menu.html"
-        
+        <link rel="Menu" href="./menu.html">
+        <link rel="About" href="./about.html">
+
     <body>
             <header> 
                 <h1>
@@ -16,13 +17,13 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#menu">Menu</a>
+                            <a href="./menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="about">About</a>
+                            <a href="./about.html">About</a>
                         </li>
                         <li>
-                            <a href="contact">Contact</a>
+                            <a href="./contact.html">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -40,4 +41,3 @@
     </body>
     </head>
 </html1>
-</doctypehtml>
