--- a/pastaamora/about.html
+++ b/pastaamora/about.html
@@ -1,20 +1,10 @@
-<doctypehtml>
+<!DOCTYPE html>
         <html1 lang="en"> 
             <head>
                 <meta charset="UTF-8"/>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                 <title> About </title> 
-                <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
-                <link rel="Menu" href="./menu.html"
-
-
-
-
-
-
-
-
-
+                <link rel="stylesheet" href="./assets/stylesheet/about.css"/>
+              
             </head>
         </html1>      
-</doctypehtml>
