--- a/pastaamora/ Pasta Amora.html
+++ b/pastaamora/ Pasta Amora.html
@@ -19,12 +19,11 @@
 
 
     <body>
-            <header class="container"> 
-            <div class="row">
-                <h1 class="column-25">
+            <header> 
+                <h1>
                 <img src="./assets/images/logo.jpg" alt="Pasta Amore">
                 </h1> 
-                <nav class="column-75">
+                <nav>
                     <ul>
                         <li>
                             <a href="./menu.html">Menu</a>
@@ -38,7 +37,7 @@
                     </ul>
                 </nav>
             </header>
-        </div>
+ 
 
             <div class="container">
 
