--- a/pastaamora/menu.html
+++ b/pastaamora/menu.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Pasta Amora </title> 
-        <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
+        <link rel="stylesheet" href="./assets/stylesheet/menu.css"/>
         <link rel="Menu" href="./menu.html">
         <link rel="About" href="./about.html">
         <!-- Google Fonts -->
