--- a/pastaamora/ Pasta Amora.html
+++ b/pastaamora/ Pasta Amora.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
         <link rel="Menu" href="./menu.html">
         <link rel="About" href="./about.html">
+        <link rel="Contact" href="./contact.html">
         <!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
@@ -26,10 +27,10 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="./index.html">Home</a>
+                            <a href="./menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="./menu.html">Menu</a>
+                            <a href="./about.html">About</a>
                         </li>
                         <li>
                             <a href="./contact.html">Contact</a>
