--- a/pastaamora/menu.html
+++ b/pastaamora/menu.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./assets/stylesheet/menu.css"/>
         <link rel="Menu" href="./menu.html">
         <link rel="About" href="./about.html">
+        <link rel="Home" href="./index.html"
         <!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
