--- a/pastaamora/index.html
+++ b/pastaamora/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
         <link rel="Menu" href="./menu.html">
         <link rel="About" href="./about.html">
+        <link rel="Contact" href="./contact.html">
         <!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
