idiv added to contact

--- a/pastaamora/contact.html
+++ b/pastaamora/contact.html
@@ -39,9 +39,16 @@
                     </ul>
                 </nav>
             </header>
- 
-
-          
+            
+            <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.9308145868467!2d-80.04542762353466!3d40.43253085467688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f68dfb72981d%3A0xc2e8dfe25ae5c00b!2s1073%20Coverdale%20St%2C%20Pittsburgh%2C%20PA%2015220!5e0!3m2!1sen!2sus!4v1701441242819!5m2!1sen!2sus" 
+            width="850" 
+            height="600" 
+            allowfullscreen="Yes" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            </div>
 
         <footer>
 
