--- a/subfolder_root/pastaamorefolder/menu.html
+++ b/subfolder_root/pastaamorefolder/menu.html
@@ -39,7 +39,12 @@
                 </nav>
             </header>
 
-            <h1><b> Our Menu... Don't Forget It's Soup Season! Order Now! </b></h1>
+            <h1 style="color: red;"><center><b> Take A Look At Our Menu!<br>
+               Limited Time Only. <mark> 50% Off </mark> On Wines <br>
+               Don't Forget It's Soup Season!<br>
+               Order Now! </b></center></h1>
+
+
             
             <center> <img src="assets/images/Menu1.png"
               style="width: 600px;px;height: 600px;px;">
